--- a/views/home.jade
+++ b/views/home.jade
@@ -45,6 +45,8 @@
       li
         img#loading-outbox(src='img/spinner.gif', class='loading', style='display:none;')
 
+  ul#threaded-timeline(style='display:none;')
+
 script(type='text/javascript', src='/socket.io/socket.io-sessions.js?'+(new Date()).getTime())
 script(type='text/javascript', src='/js/z.min.js')
 script var growler = new Growler(); //we need this here for the growler to work properly
