--- a/views/layout.jade
+++ b/views/layout.jade
@@ -5,5 +5,5 @@ html
     link(rel='stylesheet', href='http://fonts.googleapis.com/css?family=Open+Sans&subset=cyrillic,greek,latin&v1')
     link(rel='stylesheet', href='/css/z.min.css')
     meta(http-equiv='X-UA-Compatible', content='IE=9')
-    script(type='text/javascript', src='/js/libs.js')
+    script(type='text/javascript', src='/js/libs.min.js')
   body!= body
