--- a/views/home.jade
+++ b/views/home.jade
@@ -1,4 +1,4 @@
-#container(class='comment-list-wrapper')
+#float(class='comment-list-wrapper')
   #sub-nav(class='navigation')
     ul.tabbed
       li(style='float:right;')
@@ -21,7 +21,6 @@
       li
         a#dms-outbox-timeline-click(href='#', onclick='return false;', style='display:none;') outbox
     .clearer &nbsp;
-
   form#new-tweet-form(autocomplete='off')
     ul.tabbed
       li#new-tweet-input-li
@@ -29,23 +28,17 @@
 
   .hr
 
-  ul#home-timeline
-    li
-      img#loading-home(src='img/spinner.gif', class='loading')
-
-  ul#mentions-timeline(style='display:none;')
-    li
-      img#loading-mentions(src='img/spinner.gif', class='loading', style='display:none;')
-
-  ul#dms-timeline(style='display:none;')
-    ul#dms-inbox-timeline
-      li
-        img#loading-inbox(src='img/spinner.gif', class='loading', style='display:none;')
-    ul#dms-outbox-timeline(style='display:none;')
-      li
-        img#loading-outbox(src='img/spinner.gif', class='loading', style='display:none;')
-
-  ul#threaded-timeline(style='display:none;')
+#container(class='comment-list-wrapper')
+  #home-timeline
+    img#loading-home(src='img/spinner.gif', class='loading')
+  #mentions-timeline(style='display:none;')
+    img#loading-mentions(src='img/spinner.gif', class='loading', style='display:none;')
+  #dms-timeline(style='display:none;')
+    #dms-inbox-timeline
+      img#loading-inbox(src='img/spinner.gif', class='loading', style='display:none;')
+    #dms-outbox-timeline(style='display:none;')
+      img#loading-outbox(src='img/spinner.gif', class='loading', style='display:none;')
+  #threaded-timeline(style='display:none;')
 
 script(type='text/javascript', src='/socket.io/socket.io-sessions.js?'+(new Date()).getTime())
 script(type='text/javascript', src='/js/z.min.js')
