--- a/public/css/z.css
+++ b/public/css/z.css
@@ -482,7 +482,7 @@ input[type="text"]:disabled, textarea:disabled
 #sub-av li a
 {
 	background-color: #F6F6F6;
-	color: #039;
+	color: #456;
 	transition: all .20s ease-in-out;
 	-khtml-transition: all .20s ease-in-out;
 	-moz-transition: all .20s ease-in-out;
@@ -494,7 +494,7 @@ input[type="text"]:disabled, textarea:disabled
 {
 	box-shadow: 0 0 2px 2px #FFF;
 	background-color: #FFF;
-	color: black;
+	color: #039;
 	transition: all .20s ease-in-out;
 	-khtml-box-shadow: 0 0 2px 2px #FFF;
 	-khtml-transition: all .20s ease-in-out;
@@ -666,10 +666,10 @@ div.menu
 }
 div.menu a
 {
+	border-radius: 4px;
 	padding: 5px;
 	display: block;
 	outline: none;
-	border-radius: 4px;
 	-khtml-border-radius: 4px;
 	-moz-border-radius: 4px;
 	-o-border-radius: 4px;
@@ -682,16 +682,17 @@ div.menu a:hover
 }
 .menu .separator
 {
+	background-color: #f6f6f6;
+	display: block;
 	height: 2px;
 	padding: 0;
 	overflow: hidden;
-	display: block;
 }
 .menu ul, .menu li
 {
+	list-style: none;
 	margin: 0;
 	padding: 0;
-	list-style: none;
 }
 .menu li
 {
