--- a/views/layout.jade
+++ b/views/layout.jade
@@ -5,5 +5,7 @@ html
     link(rel='stylesheet', href='http://fonts.googleapis.com/css?family=Open+Sans&subset=cyrillic,greek,latin&v1')
     link(rel='stylesheet', href='/css/z.min.css')
     meta(http-equiv='X-UA-Compatible', content='IE=9')
+    script(type='text/javascript', src='https://ajax.googleapis.com/ajax/libs/prototype/1.7.0.0/prototype.js')
+    script(type='text/javascript', src='https://ajax.googleapis.com/ajax/libs/scriptaculous/1.9.0/scriptaculous.js')
     script(type='text/javascript', src='/js/libs.min.js')
   body!= body
