--- a/views/home.jade
+++ b/views/home.jade
@@ -23,7 +23,7 @@
     ul.tabbed
       li#new-tweet-input-li
         input#new-tweet(type='text', disabled='disabled', placeholder='write your tweet here and submit!', style='width:98%;', value='loading...')
-
+        #autocompleter(class='autocomplete', style='display:none')
   .hr
 
 #container(class='comment-list-wrapper')
