do use this class

--- a/views/home.jade
+++ b/views/home.jade
@@ -29,7 +29,7 @@
   .hr
 
 #container(class='comment-list-wrapper')
-  #home-timeline(class='shower')
+  #home-timeline
     img#loading-home(src='/img/spinner.gif', class='loading')
   #mentions-timeline(style='display: none;')
     img#loading-mentions(src='/img/spinner.gif', class='loading', style='display: none;')
