--- a/views/index.jade
+++ b/views/index.jade
@@ -8,6 +8,6 @@
 
 .login-inner(id='login')
   a(href='/oauth/login')
-    img(src='img/login.png', alt='')
+    img(src='/img/login.png', alt='')
 
 script $("login").center(82);
