ability to disable / enable sound, change the notification sound, usage of hotkeys is supported, bugfixes and improvements

--- a/public/css/z.css
+++ b/public/css/z.css
@@ -21,7 +21,7 @@ a
 	-khtml-transition: all .20s ease-in-out;
 	-moz-transition: all .20s ease-in-out;
 	-ms-transition: all .20s ease-in-out;
-	-o-transition: all .20s ease-in-out;
+	/*-o-transition: all .20s ease-in-out;*/
 	-webkit-transition: all .20s ease-in-out;
 }
 a:focus, a:hover
