--- a/public/css/z.css
+++ b/public/css/z.css
@@ -18,6 +18,7 @@ a
 {
 	color: #456;
 	text-decoration: none;
+	transition: all .20s ease-in-out;
 	-khtml-transition: all .20s ease-in-out;
 	-moz-transition: all .20s ease-in-out;
 	-ms-transition: all .20s ease-in-out;
@@ -649,7 +650,7 @@ div.autocomplete ul li.selected
 /*
  * click menu stuff
  */
-div.menu, div.menu-fadeout
+#control_contextmenu, #control_contextmenu_fadeout
 {
 	background-color: white;
 	border-radius: 4px;
@@ -661,56 +662,58 @@ div.menu, div.menu-fadeout
 	position: absolute;
 	top: 0;
 	z-index: 100;
+	transition: all .20s ease-in-out;
+	-khtml-transition: all .20s ease-in-out;
 	-khtml-border-radius: 4px;
 	-khtml-box-shadow: 2px 2px 5px rgba(15,15,15,0.1);
+	-moz-transition: all .20s ease-in-out;
 	-moz-border-radius: 4px;
 	-moz-box-shadow: 2px 2px 5px rgba(15,15,15,0.1);
+	-ms-transition: all .20s ease-in-out;
+	/*-o-transition: all .20s ease-in-out;*/
 	-o-border-radius: 4px;
 	-o-box-shadow: 2px 2px 5px rgba(15,15,15,0.1);
+	-webkit-transition: all .20s ease-in-out;
 	-webkit-border-radius: 4px;
 	-webkit-box-shadow: 2px 2px 5px rgba(15,15,15,0.1);
 	behavior: url(border-radius.htc);
 }
-div.menu
+#control_contextmenu
 {
 	animation: fadein 0.5s ease-in-out;
 	-moz-animation: fadein 0.5s ease-in-out;
 	-webkit-animation: fadein 0.5s ease-in-out;
 }
-div.menu-fadeout
+#control_contextmenu_fadeout
 {
 	animation: fadeout 0.5s ease-in-out;
 	-moz-animation: fadeout 0.5s ease-in-out;
 	-webkit-animation: fadeout 0.5s ease-in-out;
 }
-div.menu a
+#control_contextmenu li
 {
 	border-radius: 4px;
-	padding: 5px;
+	cursor: pointer;
 	display: block;
 	outline: none;
+	padding: 5px;
 	-khtml-border-radius: 4px;
 	-moz-border-radius: 4px;
 	-o-border-radius: 4px;
 	-webkit-border-radius: 4px;
 	behavior: url(border-radius.htc);
 }
-div.menu a:hover
+#control_contextmenu li:hover
 {
 	background-color: #f6f6f6;
 }
-.menu .separator
+#control_contextmenu .separator
 {
 	background-color: #f4f4f4;
 	display: block;
 	height: 1px;
 	padding: 0;
 	overflow: hidden;
-}
-.menu ul, .menu li
-{
-	margin: 0;
-	padding: 0;
 }
 
 /*
